2011-07-08  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed alert macro substitution. Now
	  alert_macro_substitute() does not substitute already substituted
	  part of string. Also fixed alert macro substitution for user
	  defined alerts to avoid alert macros other than _field[1-3]_
	  substituted twice.

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert-only planned downtimes.

2011-07-08  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fiexd bug in recon script

2011-07-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for warning/critical status
	  regexp (works with both numeric and string data types). Added
	  support for alert-only planned downtimes.

2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed little bug
	in a check to exception condition

2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* Makefile.PL
	lib/PandoraFMS/ReconServer.pm
	util/recon_scripts/snmpdevices.pl: Added disabled
	condition to recon tasks, readd NetAddr dependence and
	fix several bugs in addres loop into recon script

2011-07-01  Ramon Novoa  <rnovoa@artica.es>

	* Makefile.PL: Removed NetAddr::IP from the dependency list. Not
	  needed by the new improved Recon Server.

	* lib/PandoraFMS/ReconServer.pm: Improved Recon server that uses nmap.

2011-06-30  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Improved recon script 
	to update existing modules, add a new parameter optative -a 
	to force show downed interfaces (only up are processed by default)
	Get the interfaces ip (if is setted) and put it in the status interface
	module description

2011-06-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	lib/PandoraFMS/DataServer.pm: Improved the token ip
	implantation adding the ip to the secondary agent ips
